# cryptodatapy

./: CHANGELOG.md  pyproject.toml
src/cryptodatapy/: cryptocompare.py  datarequest.py  datasource.py
src/cryptodatapy/util/: datacredentials.py
