[tool.poetry]
name = "cryptodatapy"
version = "0.1.0"
description = "Cryptoasset data library"
authors = ["Nick Latinovic"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
